content box not responsive on smaller display, need fix.

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     background-color: rgb(183, 60, 60);
 }
 .headSection{
-    background-color:rgb(38, 40, 44);
+    background-color:#011827;
 }
 #reqtangel{
     display: flex;
@@ -198,3 +198,46 @@ body{
     display: flex;
     justify-content: end;
 }
+.btns{
+    display: flex;
+    padding: 70px 10px 70px 10px;
+    justify-content: center;
+}
+.story{
+    display: grid;
+    background-color: #011827;
+    height: 500px;
+    width: 100%;
+    align-content: center;
+}
+.story>div{
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+}
+.story>div button{
+    background-color:#011827;
+    color: white;
+    border-radius: 10px;
+    padding: 20px;
+    font-size: large;
+    font-weight: bold;
+    border-color: white;
+}
+.story>div p{
+    color:white;
+    font-size: 2vw;
+}
+.boxes{
+    display: grid;
+}
+.felt1{
+    display: flex;
+}
+.imgHolder{
+    width: 640px;
+    height: 460px;
+    overflow: hidden;
+    position: relative;
+}
+
